--- a/src/Styles/hero.css
+++ b/src/Styles/hero.css
@@ -12,7 +12,7 @@
   font-size: 3rem;
 }
 .hero__container .hero__content h3 {
-  color: rgb(6, 24, 18);
+  color: #061812;
   font-family: Raleway, sans-serif;
   font-size: 1.375rem;
   font-weight: 700;
