--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ h6 {
   margin-bottom: 0.5rem;
   margin-top: 0px;
 }
+
 img {
   max-width: 100%;
   height: 100%;
@@ -57,6 +58,7 @@ body a {
   width: 20%;
   margin: 0 auto;
 }
+
 .section__title .big__bar {
   margin: auto;
   width: 80px;
@@ -71,7 +73,7 @@ body a {
   background: rgb(64, 185, 118);
 }
 .section__title h2 {
-  color: rgb(255, 255, 255);
+  color: #221f1f;
   font-size: 1.6rem;
   font-family: var(--roboto_font);
   font-weight: 500;
