--- a/src/Styles/contact.css
+++ b/src/Styles/contact.css
@@ -30,14 +30,12 @@
 }
 .icon_link a {
   font-size: 25px;
-  color: #212529;
   transition: 0.3s;
 }
 .icon_link a:hover {
   color: #198754;
 }
 .contact__form {
-  background: #fff;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 20px;
   font-family: "Poppins", sans-serif;
@@ -55,9 +53,7 @@
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
-  background: #fff;
-  border: 2px solid #dee;
+  border: 2px solid;
   font-size: 17px;
   border-radius: 6px;
   resize: none;
@@ -69,8 +65,6 @@
 .contact__form form input:focus,
 .contact__form form textarea:focus {
   border-color: rgb(25, 135, 84, 0.5);
-  color: #212529;
-  background: #fff;
   outline: 0;
   box-shadow: 0 0 0 0.25rem rgba(25, 135, 84, 0.4);
 }
