--- a/src/Styles/footer.css
+++ b/src/Styles/footer.css
@@ -21,14 +21,13 @@
   font-family: var(--roboto_font);
   text-decoration: none;
   font-weight: 500;
-  color: #3e4957;
   transition: 0.2s linear;
 }
 .footer_top .footer_nav nav ul li a:hover {
-  color: #1f6d4f;
+  color: #40b976;
 }
 .footer_top .footer_nav nav ul li a.active {
-  color: #1f6d4f;
+  color: #40b976;
   font-weight: 600;
 }
 
@@ -38,8 +37,8 @@
   padding-bottom: 10px;
 }
 .footer_top .social_icon ul li a {
+  color: #40b976;
   font-size: 30px;
-  color: #3e4957;
 }
 .copyright_area {
   border-top: 1px solid #a0a7b0;
@@ -47,7 +46,6 @@
 }
 .copyright_area p {
   text-align: center;
-  color: #3e4957;
   margin-top: 15px;
   font-size: 20px;
   font-weight: 500;
