--- a/src/Styles/header.css
+++ b/src/Styles/header.css
@@ -138,7 +138,7 @@
   }
   .nav-elements.active {
     width: 230px;
-    background: #fff;
+    /* background: #fff; */
     padding-left: 20px;
     padding-bottom: 20px;
     z-index: 999;
