--- a/src/Styles/skills.css
+++ b/src/Styles/skills.css
@@ -8,6 +8,7 @@
   display: grid;
   align-items: center;
   grid-template-columns: repeat(4, 1fr);
+  justify-content: center;
   gap: 30px;
   padding: 100px 0;
 }
